IGNITE-28729 Rebalance TC Bot JVM memory options